# ArgusScope

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: security_scan.yml  tests.yml
argus_scope/: cli.py
argus_scope/api/: server.py
argus_scope/api/routers/: scan_router.py  workspace_router.py
argus_scope/core/: engine.py  models.py  workspace.py
argus_scope/database/: db_manager.py
argus_scope/utils/: config_loader.py  db.py
docs/: developer_guide.md
tests/load/: test_performance.py
tests/unit/: test_core.py  test_workspace.py
