[tool.poetry]
name = "argus_scope"
version = "1.0.0"
description = "Reconnaissance and vulnerability scanning platform."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.7"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pymongo = "^4.8.0"
typer = {extras = ["rich"], version = "^0.12.3"}
elasticsearch = "^8.14.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
numpy = "^1.26.4"
dnspython = "^2.6.1"
alembic = "^1.13.1"
python-multipart = ">=0.0.18"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^5.0.0"
locust = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
